# mpc_path_follower_ros

./: CHANGELOG.rst  CMakeLists.txt  blp_mpc_plugin.xml  blp_plugin.xml  package.xml  readme.md  readme.txt
include/mpc_path_follower/: mpc_path_follower.h  mpc_path_follower_ros.h
launch/: hypha_mpc.launch  move_base.launch.xml  mpc_params.yaml  mpc_test.launch  view_navigation.launch
maps/: will.pgm  will.yaml
rviz/: navigation.rviz
src/: mpc_path_follower.cpp  mpc_path_follower_ros.cpp
